rwf-bin/src/ui/dialog/snapshot_tests/snapshots/rwf__ui__dialog__snapshot_tests__input_with_default_value_80x24.snap
---
source: rwf-bin/src/ui/dialog/snapshot_tests/mod.rs
expression: "render_dialog_to_string(dialog, state, width, height)"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 24 },
    content: [
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                ┌Rename File───────────────────────────────────┐                ",
        "                │  New name:                                   │                ",
        "                │  original_file.txt█                          │                ",
        "                │  (Enter to confirm, Esc to cancel)           │                ",
        "                └──────────────────────────────────────────────┘                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 9, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 17, y: 9, fg: Black, bg: Gray, underline: Reset, modifier: BOLD,
        x: 28, y: 9, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 10, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 17, y: 10, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 19, y: 10, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 61, y: 10, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 63, y: 10, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 11, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 17, y: 11, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 19, y: 11, fg: Black, bg: White, underline: Reset, modifier: NONE,
        x: 36, y: 11, fg: Black, bg: Cyan, underline: Reset, modifier: BOLD,
        x: 37, y: 11, fg: Black, bg: White, underline: Reset, modifier: NONE,
        x: 61, y: 11, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 63, y: 11, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 12, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 17, y: 12, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 19, y: 12, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 61, y: 12, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 63, y: 12, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 13, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
